# macad2018demo

./: README.md  setup.cfg  setup.py
autopkg-recipe/: macad2018demo.pkg.recipe
macad2018demo/: __init__.py
tests/: test_sample.py
