[bumpversion]
current_version = 0.0.2
commit = True
tag = True

[aliases]
test = pytest

[bdist_wheel]
universal = 1

[metadata]
description-file = README.md

[tool:pytest]
addopts = --verbose

[bumpversion:file:setup.py]

[bumpversion:file:README.md]

[bumpversion:file:autopkg-recipe/macad2018demo.pkg.recipe]

[bumpversion:file:macad2018demo/__init__.py]

